POS-2758: added itro page image

--- a/PositionIn/Classes/Application Layer/Stories/GiveBlood/Interface/IntroPage/PositionIn.IntroPageViewController.xib
+++ b/PositionIn/Classes/Application Layer/Stories/GiveBlood/Interface/IntroPage/PositionIn.IntroPageViewController.xib
@@ -27,10 +27,10 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="xsL-9B-C1O" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Cax-ui-Deb"/>
-                <constraint firstAttribute="trailing" secondItem="xsL-9B-C1O" secondAttribute="trailing" id="Swo-8L-rnK"/>
-                <constraint firstItem="xsL-9B-C1O" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Url-Vf-Cde"/>
-                <constraint firstAttribute="bottom" secondItem="xsL-9B-C1O" secondAttribute="bottom" id="iAX-do-ppN"/>
+                <constraint firstItem="xsL-9B-C1O" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="CRj-zP-XpU"/>
+                <constraint firstAttribute="bottom" secondItem="xsL-9B-C1O" secondAttribute="bottom" id="nkN-VB-ap1"/>
+                <constraint firstAttribute="trailing" secondItem="xsL-9B-C1O" secondAttribute="trailing" id="qyJ-sv-Vbg"/>
+                <constraint firstItem="xsL-9B-C1O" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="xFh-C0-nHz"/>
             </constraints>
         </view>
     </objects>
