--- a/PositionIn/Classes/Application Layer/Stories/GiveBlood/Interface/IntroPage/IntroPageCells/TopCell/TopIntroCell.xib
+++ b/PositionIn/Classes/Application Layer/Stories/GiveBlood/Interface/IntroPage/IntroPageCells/TopCell/TopIntroCell.xib
@@ -7,18 +7,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="599" id="KGk-i7-Jjw" customClass="TopIntroCell" customModule="PositionIn" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="544" height="599"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="652" id="KGk-i7-Jjw" customClass="TopIntroCell" customModule="PositionIn" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="544" height="652"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="544" height="598.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="544" height="651.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qgS-vE-b5a" userLabel="cardContainerView">
-                        <rect key="frame" x="10" y="0.0" width="524" height="593.5"/>
+                        <rect key="frame" x="10" y="80" width="524" height="566.5"/>
                         <subviews>
                             <view contentMode="scaleToFill" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="wQ7-hr-sXO" userLabel="VisibleContainerView">
-                                <rect key="frame" x="0.0" y="0.0" width="524" height="184"/>
+                                <rect key="frame" x="0.0" y="0.0" width="524" height="157"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g8i-nC-KVw" userLabel="hearedViewContainer">
                                         <rect key="frame" x="16" y="6" width="492" height="92"/>
@@ -80,7 +80,7 @@
                                         </variation>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVc-Ju-bBI">
-                                        <rect key="frame" x="16" y="98" width="492" height="70"/>
+                                        <rect key="frame" x="16" y="98" width="492" height="43"/>
                                         <string key="text">The Kenya Red Cross Society is the leading blood donor recruitment partner to the Government and supports in recruitment of blood donors to the Kenya National Blood transfusion services (KNBTS).</string>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="calibratedRGB"/>
@@ -99,7 +99,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gJg-oK-GDG" userLabel="detailContainerView">
-                                <rect key="frame" x="0.0" y="184" width="524" height="369"/>
+                                <rect key="frame" x="0.0" y="157" width="524" height="369"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aNe-Na-bnd" userLabel="ContainerView">
                                         <rect key="frame" x="16" y="0.0" width="492" height="369"/>
@@ -192,7 +192,7 @@
                                                 <rect key="frame" x="0.0" y="195" width="492" height="56.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" image="bullet_icon" translatesAutoresizingMaskIntoConstraints="NO" id="UM2-Oe-1UD">
-                                                        <rect key="frame" x="0.0" y="22.5" width="12" height="12"/>
+                                                        <rect key="frame" x="0.0" y="23" width="12" height="12"/>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Take lead in blood mobilization during disasters and emergency set ups" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czu-2Z-VOU">
                                                         <rect key="frame" x="24" y="9" width="452" height="37.5"/>
@@ -213,7 +213,7 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sxN-rX-3Pr">
-                                                <rect key="frame" x="0.0" y="259.5" width="492" height="93.5"/>
+                                                <rect key="frame" x="0.0" y="259" width="492" height="93.5"/>
                                                 <string key="text">We also recruit, train and manage a pool of volunteers to support our outreach programmes to raise awareness about blood donation, provide routine blood donor care at collection centers. We are also always ready for donor management support in times of emergencies and disasters.</string>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.54000000000000004" colorSpace="calibratedRGB"/>
@@ -251,8 +251,8 @@
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
-                                                <exclude reference="9VY-x3-AlY"/>
                                                 <exclude reference="fZG-7z-WDF"/>
+                                                <exclude reference="9VY-x3-AlY"/>
                                                 <exclude reference="39r-fs-GGt"/>
                                                 <exclude reference="oGI-07-2aL"/>
                                             </mask>
@@ -268,7 +268,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zWS-Fi-uaR" userLabel="ButtonContainerView">
-                                <rect key="frame" x="0.0" y="553" width="524" height="40"/>
+                                <rect key="frame" x="0.0" y="526" width="524" height="40"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WPX-hP-TRB">
                                         <rect key="frame" x="0.0" y="0.0" width="524" height="40"/>
@@ -322,7 +322,7 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="qgS-vE-b5a" secondAttribute="trailing" constant="10" id="5Zr-6k-c2V"/>
-                    <constraint firstItem="qgS-vE-b5a" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Eie-ZO-JkJ"/>
+                    <constraint firstItem="qgS-vE-b5a" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="80" id="Eie-ZO-JkJ"/>
                     <constraint firstAttribute="bottom" secondItem="qgS-vE-b5a" secondAttribute="bottom" constant="5" id="eWR-hp-Hsk"/>
                     <constraint firstItem="qgS-vE-b5a" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="qR7-80-i00"/>
                 </constraints>
@@ -336,7 +336,7 @@
                 <outlet property="lastVisibleElementBottomAnchorConstraint" destination="YQN-5C-U2j" id="Th1-6m-9P9"/>
                 <outlet property="readMoreButton" destination="WPX-hP-TRB" id="oAK-ls-ayj"/>
             </connections>
-            <point key="canvasLocation" x="363" y="554.5"/>
+            <point key="canvasLocation" x="363" y="612"/>
         </tableViewCell>
     </objects>
     <resources>
