--- a/PositionIn/Classes/Application Layer/Stories/GiveBlood/Interface/BloodType/BloodTypeView/BloodTypeView.xib
+++ b/PositionIn/Classes/Application Layer/Stories/GiveBlood/Interface/BloodType/BloodTypeView/BloodTypeView.xib
@@ -8,23 +8,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="BloodTypeView" customModule="PositionIn" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="212"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="174"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is you blood type?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q2e-70-oJj">
-                    <rect key="frame" x="20" y="20" width="260" height="20"/>
+                    <rect key="frame" x="20" y="10" width="260" height="20"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select from list below" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T9U-X4-clF">
-                    <rect key="frame" x="20" y="50" width="260" height="17"/>
+                    <rect key="frame" x="20" y="35" width="260" height="17"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
                     <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G2U-pS-cR5">
-                    <rect key="frame" x="14" y="92" width="68" height="68"/>
+                    <rect key="frame" x="14" y="57" width="68" height="68"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="68" id="UIC-Fg-uYY"/>
                         <constraint firstAttribute="width" constant="68" id="oGS-qO-Odd"/>
@@ -36,7 +36,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tWF-DO-2J8">
-                    <rect key="frame" x="82" y="92" width="68" height="68"/>
+                    <rect key="frame" x="82" y="57" width="68" height="68"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="68" id="MF4-js-hLk"/>
                         <constraint firstAttribute="width" constant="68" id="ZNc-M3-AbF"/>
@@ -48,7 +48,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rzb-b0-ee2">
-                    <rect key="frame" x="150" y="92" width="68" height="68"/>
+                    <rect key="frame" x="150" y="57" width="68" height="68"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="68" id="CVc-Zt-Cab"/>
                         <constraint firstAttribute="height" constant="68" id="tuh-aD-Gxw"/>
@@ -60,7 +60,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Puq-4X-K9p">
-                    <rect key="frame" x="218" y="92" width="68" height="68"/>
+                    <rect key="frame" x="218" y="57" width="68" height="68"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="68" id="USa-4N-1N6"/>
                         <constraint firstAttribute="width" constant="68" id="ffj-Ng-0sC"/>
@@ -72,13 +72,17 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Fl-dP-Trg">
-                    <rect key="frame" x="14" y="168" width="272" height="36"/>
+                    <rect key="frame" x="14" y="133" width="272" height="33"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <state key="normal" title="DON'T KNOW">
                         <color key="titleColor" red="0.92941176470588238" green="0.10588235294117647" blue="0.1803921568627451" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <state key="selected" backgroundImage="red_background">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="highlighted" backgroundImage="gray_background">
+                        <color key="titleColor" red="0.68627450980392157" green="0.078431372549019607" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="3"/>
@@ -104,11 +108,11 @@
                 <constraint firstItem="G2U-pS-cR5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="S30-La-NgN"/>
                 <constraint firstAttribute="trailing" secondItem="Q2e-70-oJj" secondAttribute="trailing" constant="20" id="VST-7V-oiM"/>
                 <constraint firstItem="Q2e-70-oJj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="WsW-Al-R10"/>
-                <constraint firstItem="Q2e-70-oJj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="Yek-5U-ftU"/>
+                <constraint firstItem="Q2e-70-oJj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="Yek-5U-ftU"/>
                 <constraint firstItem="rzb-b0-ee2" firstAttribute="top" secondItem="G2U-pS-cR5" secondAttribute="top" id="b7l-mP-hSS"/>
-                <constraint firstItem="G2U-pS-cR5" firstAttribute="top" secondItem="T9U-X4-clF" secondAttribute="bottom" constant="25" id="doR-Up-GYF"/>
+                <constraint firstItem="G2U-pS-cR5" firstAttribute="top" secondItem="T9U-X4-clF" secondAttribute="bottom" constant="5" id="doR-Up-GYF"/>
                 <constraint firstItem="Puq-4X-K9p" firstAttribute="leading" secondItem="rzb-b0-ee2" secondAttribute="trailing" id="rCQ-5B-8AN"/>
-                <constraint firstItem="T9U-X4-clF" firstAttribute="top" secondItem="Q2e-70-oJj" secondAttribute="bottom" constant="10" id="rMD-I5-7cF"/>
+                <constraint firstItem="T9U-X4-clF" firstAttribute="top" secondItem="Q2e-70-oJj" secondAttribute="bottom" constant="5" id="rMD-I5-7cF"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
@@ -122,6 +126,7 @@
         <image name="blood_b_group_selected" width="68" height="68"/>
         <image name="blood_o_group" width="68" height="68"/>
         <image name="blood_o_group_selected" width="68" height="68"/>
+        <image name="gray_background" width="1" height="1"/>
         <image name="red_background" width="1" height="1"/>
     </resources>
 </document>
